--- a/konga store.html
+++ b/konga store.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="kongacss.css">
 </head>
 
-<body bgcolor="rgb(245,245,245)" style="padding:0; margin:0;">
+<body bgcolor="#ccc" style="padding:0; margin:0;">
 	<div style="margin-top:20px; color:grey; font-family:palatino; text-decoration:none;">
 	<a href="www.bulkpurchase.com" style="padding-left:120px;"> Bulk Purchase &nbsp;  | &nbsp; </a> 
 	<a href="www.storelocator.com"> Store Locator </a>
@@ -220,7 +220,15 @@ We are so delighted to welcome you to the new Konga, a 21st Century platform tha
 
 	<table width="90% height="300px" align="center" cellspacing="0" border="solid 1px grey">
 		<tr>
-			<td>Buying on Konga</td>
+			<td>Buying on Konga<br>
+					<span>
+					<a href="www.bulkpurchase.com" style="padding-left:120px;"> Buyer Safety Center &nbsp;  | &nbsp; </a> 
+	<a href="www.storelocator.com"> Konga Buyer Protection &nbsp;  | &nbsp;</a>
+	
+	<a href="www.contactus.com" style="padding-left:400px;"> How to Shop on Konga &nbsp; | &nbsp; </a> 
+	<a href="www.faq.com">Konga Return Policy &nbsp; | &nbsp; </a> 
+	<a href="www.returnpolicy.com"> Return Policy  &nbsp; | &nbsp; </a></span>
+			</td>
 			<td>Shop Easier!</td>
 		</tr>
 	</table>
